Add dummy matrix for personXoffer

--- a/Starbucks_Capstone_notebook.ipynb
+++ b/Starbucks_Capstone_notebook.ipynb
@@ -1646,6 +1646,482 @@
     "# Step 7: clean 'live_offers' to keep only the offer name\n",
     "# transcript_log['live_offers'] = transcript_log['live_offers'].apply(lambda x: [offer[0] for offer in x] if isinstance(x, list) else [])\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## First Question: What is the most effective type of offer per demographic group?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dictionary\n",
+    "offer_dictionary = {\n",
+    "    row[\"id\"]: f\"{row['offer_type']}_{row['reward']}_{row['difficulty']}_{row['duration']}\"\n",
+    "    for _, row in portfolio.iterrows()\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 345,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To answer the question: offers active during transactions\n",
+    "\n",
+    "transaction_per_person = log[log['event'] == 'transaction'][['person', 'amount', 'active_offers']] # extract transactions\n",
+    "transaction_per_person.loc[:, 'active_offers'] = transaction_per_person['active_offers'].apply(lambda x: [offer[0] for offer in x] if isinstance(x, list) else []) # keep only offer full name\n",
+    "transaction_per_person['active_offers'] = transaction_per_person['active_offers'].apply(\n",
+    "    lambda offers: [offer_dictionary.get(offer, offer) for offer in offers] # Apply dictionary\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 346,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>person</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>active_offers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0009655768c64bdeb2e877511632db8f</td>\n",
+       "      <td>22.16</td>\n",
+       "      <td>[informational_0_0_3]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0009655768c64bdeb2e877511632db8f</td>\n",
+       "      <td>8.57</td>\n",
+       "      <td>[informational_0_0_4, bogo_5_5_5]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0009655768c64bdeb2e877511632db8f</td>\n",
+       "      <td>14.11</td>\n",
+       "      <td>[discount_2_10_10]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0009655768c64bdeb2e877511632db8f</td>\n",
+       "      <td>13.56</td>\n",
+       "      <td>[discount_2_10_10]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0009655768c64bdeb2e877511632db8f</td>\n",
+       "      <td>10.27</td>\n",
+       "      <td>[discount_2_10_10]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>272946</th>\n",
+       "      <td>ffff82501cea40309d5fdd7edcca4a07</td>\n",
+       "      <td>13.17</td>\n",
+       "      <td>[discount_2_10_7, discount_2_10_7]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>272948</th>\n",
+       "      <td>ffff82501cea40309d5fdd7edcca4a07</td>\n",
+       "      <td>7.79</td>\n",
+       "      <td>[discount_2_10_7, bogo_5_5_7]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>272951</th>\n",
+       "      <td>ffff82501cea40309d5fdd7edcca4a07</td>\n",
+       "      <td>14.23</td>\n",
+       "      <td>[bogo_5_5_7, discount_2_10_7]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>272953</th>\n",
+       "      <td>ffff82501cea40309d5fdd7edcca4a07</td>\n",
+       "      <td>10.12</td>\n",
+       "      <td>[bogo_5_5_7, discount_2_10_7]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>272954</th>\n",
+       "      <td>ffff82501cea40309d5fdd7edcca4a07</td>\n",
+       "      <td>18.91</td>\n",
+       "      <td>[bogo_5_5_7, discount_2_10_7]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>138953 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  person  amount  \\\n",
+       "2       0009655768c64bdeb2e877511632db8f   22.16   \n",
+       "6       0009655768c64bdeb2e877511632db8f    8.57   \n",
+       "9       0009655768c64bdeb2e877511632db8f   14.11   \n",
+       "11      0009655768c64bdeb2e877511632db8f   13.56   \n",
+       "13      0009655768c64bdeb2e877511632db8f   10.27   \n",
+       "...                                  ...     ...   \n",
+       "272946  ffff82501cea40309d5fdd7edcca4a07   13.17   \n",
+       "272948  ffff82501cea40309d5fdd7edcca4a07    7.79   \n",
+       "272951  ffff82501cea40309d5fdd7edcca4a07   14.23   \n",
+       "272953  ffff82501cea40309d5fdd7edcca4a07   10.12   \n",
+       "272954  ffff82501cea40309d5fdd7edcca4a07   18.91   \n",
+       "\n",
+       "                             active_offers  \n",
+       "2                    [informational_0_0_3]  \n",
+       "6        [informational_0_0_4, bogo_5_5_5]  \n",
+       "9                       [discount_2_10_10]  \n",
+       "11                      [discount_2_10_10]  \n",
+       "13                      [discount_2_10_10]  \n",
+       "...                                    ...  \n",
+       "272946  [discount_2_10_7, discount_2_10_7]  \n",
+       "272948       [discount_2_10_7, bogo_5_5_7]  \n",
+       "272951       [bogo_5_5_7, discount_2_10_7]  \n",
+       "272953       [bogo_5_5_7, discount_2_10_7]  \n",
+       "272954       [bogo_5_5_7, discount_2_10_7]  \n",
+       "\n",
+       "[138953 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 346,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transaction_per_person"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 356,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>person</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>offer_bogo_10_10_5</th>\n",
+       "      <th>offer_bogo_10_10_7</th>\n",
+       "      <th>offer_bogo_5_5_5</th>\n",
+       "      <th>offer_bogo_5_5_7</th>\n",
+       "      <th>offer_discount_2_10_10</th>\n",
+       "      <th>offer_discount_2_10_7</th>\n",
+       "      <th>offer_discount_3_7_7</th>\n",
+       "      <th>offer_discount_5_20_10</th>\n",
+       "      <th>offer_informational_0_0_3</th>\n",
+       "      <th>offer_informational_0_0_4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0009655768c64bdeb2e877511632db8f</td>\n",
+       "      <td>22.16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0009655768c64bdeb2e877511632db8f</td>\n",
+       "      <td>8.57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0009655768c64bdeb2e877511632db8f</td>\n",
+       "      <td>14.11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0009655768c64bdeb2e877511632db8f</td>\n",
+       "      <td>13.56</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0009655768c64bdeb2e877511632db8f</td>\n",
+       "      <td>10.27</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>272946</th>\n",
+       "      <td>ffff82501cea40309d5fdd7edcca4a07</td>\n",
+       "      <td>13.17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>272948</th>\n",
+       "      <td>ffff82501cea40309d5fdd7edcca4a07</td>\n",
+       "      <td>7.79</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>272951</th>\n",
+       "      <td>ffff82501cea40309d5fdd7edcca4a07</td>\n",
+       "      <td>14.23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>272953</th>\n",
+       "      <td>ffff82501cea40309d5fdd7edcca4a07</td>\n",
+       "      <td>10.12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>272954</th>\n",
+       "      <td>ffff82501cea40309d5fdd7edcca4a07</td>\n",
+       "      <td>18.91</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>138953 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  person  amount  offer_bogo_10_10_5  \\\n",
+       "2       0009655768c64bdeb2e877511632db8f   22.16                   0   \n",
+       "6       0009655768c64bdeb2e877511632db8f    8.57                   0   \n",
+       "9       0009655768c64bdeb2e877511632db8f   14.11                   0   \n",
+       "11      0009655768c64bdeb2e877511632db8f   13.56                   0   \n",
+       "13      0009655768c64bdeb2e877511632db8f   10.27                   0   \n",
+       "...                                  ...     ...                 ...   \n",
+       "272946  ffff82501cea40309d5fdd7edcca4a07   13.17                   0   \n",
+       "272948  ffff82501cea40309d5fdd7edcca4a07    7.79                   0   \n",
+       "272951  ffff82501cea40309d5fdd7edcca4a07   14.23                   0   \n",
+       "272953  ffff82501cea40309d5fdd7edcca4a07   10.12                   0   \n",
+       "272954  ffff82501cea40309d5fdd7edcca4a07   18.91                   0   \n",
+       "\n",
+       "        offer_bogo_10_10_7  offer_bogo_5_5_5  offer_bogo_5_5_7  \\\n",
+       "2                        0                 0                 0   \n",
+       "6                        0                 1                 0   \n",
+       "9                        0                 0                 0   \n",
+       "11                       0                 0                 0   \n",
+       "13                       0                 0                 0   \n",
+       "...                    ...               ...               ...   \n",
+       "272946                   0                 0                 0   \n",
+       "272948                   0                 0                 1   \n",
+       "272951                   0                 0                 1   \n",
+       "272953                   0                 0                 1   \n",
+       "272954                   0                 0                 1   \n",
+       "\n",
+       "        offer_discount_2_10_10  offer_discount_2_10_7  offer_discount_3_7_7  \\\n",
+       "2                            0                      0                     0   \n",
+       "6                            0                      0                     0   \n",
+       "9                            1                      0                     0   \n",
+       "11                           1                      0                     0   \n",
+       "13                           1                      0                     0   \n",
+       "...                        ...                    ...                   ...   \n",
+       "272946                       0                      1                     0   \n",
+       "272948                       0                      1                     0   \n",
+       "272951                       0                      1                     0   \n",
+       "272953                       0                      1                     0   \n",
+       "272954                       0                      1                     0   \n",
+       "\n",
+       "        offer_discount_5_20_10  offer_informational_0_0_3  \\\n",
+       "2                            0                          1   \n",
+       "6                            0                          0   \n",
+       "9                            0                          0   \n",
+       "11                           0                          0   \n",
+       "13                           0                          0   \n",
+       "...                        ...                        ...   \n",
+       "272946                       0                          0   \n",
+       "272948                       0                          0   \n",
+       "272951                       0                          0   \n",
+       "272953                       0                          0   \n",
+       "272954                       0                          0   \n",
+       "\n",
+       "        offer_informational_0_0_4  \n",
+       "2                               0  \n",
+       "6                               1  \n",
+       "9                               0  \n",
+       "11                              0  \n",
+       "13                              0  \n",
+       "...                           ...  \n",
+       "272946                          0  \n",
+       "272948                          0  \n",
+       "272951                          0  \n",
+       "272953                          0  \n",
+       "272954                          0  \n",
+       "\n",
+       "[138953 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 356,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Explode active_offers\n",
+    "transaction_per_person_exploded = transaction_per_person.explode(\"active_offers\")\n",
+    "\n",
+    "# Create dummies\n",
+    "transaction_per_person_dummies = pd.get_dummies(transaction_per_person_exploded[\"active_offers\"], prefix=\"offer\").fillna(0).astype(bool).astype(int)\n",
+    "\n",
+    "# join back\n",
+    "transaction_per_person_final = transaction_per_person_exploded.drop(columns=[\"active_offers\"]).join(transaction_per_person_dummies)\n",
+    "\n",
+    "# group by index\n",
+    "transaction_per_person_final.groupby(level=0).max()"
+   ]
   }
  ],
  "metadata": {
