--- a/Starbucks_Capstone_notebook.ipynb
+++ b/Starbucks_Capstone_notebook.ipynb
@@ -1931,7 +1931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2215,13 +2215,13 @@
    ],
    "source": [
     "# Explode active_offers\n",
-    "transaction_per_person_exploded = transaction_per_person.explode(\"active_offers\")\n",
+    "transaction_per_person_exploded = transaction_per_person.explode('active_offers')\n",
     "\n",
     "# Create dummies\n",
-    "transaction_per_person_dummies = pd.get_dummies(transaction_per_person_exploded[\"active_offers\"], prefix=\"offer\").fillna(0).astype(bool).astype(int)\n",
+    "transaction_per_person_dummies = pd.get_dummies(transaction_per_person_exploded['active_offers'], prefix='offer').fillna(0).astype(bool).astype(int)\n",
     "\n",
     "# join back\n",
-    "transaction_per_person_final = transaction_per_person_exploded.drop(columns=[\"active_offers\"]).join(transaction_per_person_dummies)\n",
+    "transaction_per_person_final = transaction_per_person_exploded.drop(columns=['active_offers']).join(transaction_per_person_dummies)\n",
     "\n",
     "# group by index\n",
     "transaction_per_person_final = transaction_per_person_final.groupby(level=0).max()\n",
@@ -2607,7 +2607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -2891,11 +2891,7 @@
    ],
    "source": [
     "# drop gender, age group and income group\n",
-    "transaction_person_group_clean = transaction_person_group.drop(columns=['person', 'gender', 'age_group', 'income_group'], axis=1)\n",
-    "\n",
-    "# groupby demographic group with mean\n",
-    "#transaction_per_group = transaction_person_group_clean.groupby(['demographic_group', 'person']).mean()\n",
-    "transaction_per_group = transaction_person_group_clean\n",
+    "transaction_per_group = transaction_person_group.drop(columns=['person', 'gender', 'age_group', 'income_group'], axis=1)\n",
     "\n",
     "display(transaction_per_group)"
    ]
@@ -3769,6 +3765,64 @@
    ],
    "source": [
     "significant_offers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Predict amount spent with a Machine Learning model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prepare matrix for model\n",
+    "\n",
+    "# extract demographic group\n",
+    "transaction_demographic = transaction_per_group[['demographic_group']]\n",
+    "\n",
+    "# create dummy variables\n",
+    "demographic_group_dummies = pd.get_dummies(test['demographic_group'], prefix='group').fillna(0).astype(bool).astype(int)\n",
+    "\n",
+    "# Create response and explanatory variables\n",
+    "X = pd.concat([demographic_group_dummies, transaction_per_group.drop(columns=['demographic_group', 'amount'])], axis=1)\n",
+    "y = transaction_per_group[['amount']]\n",
+    "\n",
+    "# Create train and test sets with a proportion of 70% train 30% test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.3, random_state=42)\n",
+    "\n",
+    "# Instantiate and fit the model\n",
+    "lm_model = LinearRegression()\n",
+    "lm_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions using your model\n",
+    "y_test_preds = lm_model.predict(X_test)\n",
+    "y_train_preds = lm_model.predict(X_train)\n",
+    "\n",
+    "# Model scoring\n",
+    "test_score = r2_score(y_test, y_test_preds)\n",
+    "train_score = r2_score(y_train, y_train_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The test score is 0.071 and the train score is 0.068\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The test score is {:2.2} and the train score is {:2.2}'.format(test_score, train_score))"
    ]
   }
  ],
