--- a/Starbucks_Capstone_notebook.ipynb
+++ b/Starbucks_Capstone_notebook.ipynb
@@ -3776,7 +3776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3799,7 +3799,7 @@
     "lm_model = LinearRegression()\n",
     "lm_model.fit(X_train, y_train)\n",
     "\n",
-    "# Make predictions using your model\n",
+    "# Make predictions using model\n",
     "y_test_preds = lm_model.predict(X_test)\n",
     "y_train_preds = lm_model.predict(X_train)\n",
     "\n",
