Add missing docstring

--- a/Starbucks_Capstone_notebook.ipynb
+++ b/Starbucks_Capstone_notebook.ipynb
@@ -2933,13 +2933,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to run regression for each demographic group\n",
     "def run_regression_for_group(group_df):\n",
-    "    # Prepare independent variables (offers) and dependent variable (amount)\n",
+    "    '''\n",
+    "    Creates explanatory and response variables. Fit OLS model.\n",
+    "    INPUT:\n",
+    "    group_df - a dataframe with the amount and dummy variables for a demographic group\n",
+    "\n",
+    "    OUTPUT:\n",
+    "    model - the OLS model fit for that demographic group\n",
+    "    '''\n",
+    "    # Prepare response variables (offers) and explanatory variable (amount)\n",
     "    cols = transaction_per_group.columns\n",
     "    X = group_df[cols.drop(['demographic_group', 'amount'])]\n",
     "    y = group_df['amount']\n",
