Add cross validation

--- a/Starbucks_Capstone_notebook.ipynb
+++ b/Starbucks_Capstone_notebook.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,15 +28,15 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import r2_score, mean_squared_error\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score, KFold\n",
+    "from sklearn.metrics import r2_score\n",
     "import statsmodels.api as sm\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "9  2906b810c7d4411798c6938adc9daaa5  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
        "9  {'offer_type': 'discount', 'reward': 2, 'diffi...  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
        "4   None  118  a03223e636434f42ac4c3df47e8bac43          20170804       NaN"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
        "4  {'offer id': '4d5c57ea9a6940dd891ad53e9dbe8da0'}     0  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1219,7 +1219,7 @@
        "[17000 rows x 4 columns]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1245,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1362,7 @@
        "4  4d5c57ea9a6940dd891ad53e9dbe8da0     0  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1504,7 @@
        "127578  {'offer_type': 'informational', 'reward': 0, '...  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1738,7 +1738,7 @@
        "4  [(3f207df678b143eea3cee63160fa8bed, 336, {'off...  "
       ]
      },
-     "execution_count": 134,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1758,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1773,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1789,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1920,7 +1920,7 @@
        "[138953 rows x 3 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1931,7 +1931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2231,7 +2231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2607,7 +2607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2912,7 +2912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2933,7 +2933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2967,7 +2967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3571,7 +3571,7 @@
        "Unknown                                            0.227243  "
       ]
      },
-     "execution_count": 143,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3584,7 +3584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3600,7 +3600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3766,7 +3766,7 @@
        "Unknown                              [offer_discount_2_10_10, offer_discount_3_7_7]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3784,7 +3784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3794,7 +3794,7 @@
     "transaction_demographic = transaction_per_group[['demographic_group']]\n",
     "\n",
     "# create dummy variables\n",
-    "demographic_group_dummies = pd.get_dummies(test['demographic_group'], prefix='group').fillna(0).astype(bool).astype(int)\n",
+    "demographic_group_dummies = pd.get_dummies(transaction_per_group['demographic_group'], prefix='group').fillna(0).astype(bool).astype(int)\n",
     "\n",
     "# Create response and explanatory variables\n",
     "X = pd.concat([demographic_group_dummies, transaction_per_group.drop(columns=['demographic_group', 'amount'])], axis=1)\n",
@@ -3818,7 +3818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3831,6 +3831,91 @@
    ],
    "source": [
     "print('The test score is {:2.2} and the train score is {:2.2}'.format(test_score, train_score))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Refinement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model_fit_cross_validation(selected_model, X, y):\n",
+    "    '''\n",
+    "    Split a dataset using K-fols. Then fits the seleted model and return the coefficients and r2 scores\n",
+    "    INPUT:\n",
+    "    selected_model - a string with the selected model to fit\n",
+    "    X - a dataframe with the response variable\n",
+    "    y - a dataframe with the explanatory variable\n",
+    "\n",
+    "    OUTPUT:\n",
+    "    coefficients - an array of coefficientes for each fold\n",
+    "    cv_scores - an array of r2 scores for each fold\n",
+    "    '''\n",
+    "    # Define model\n",
+    "    lm_model = selected_model\n",
+    "\n",
+    "    # Define K-Fold cross-validation\n",
+    "    kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "\n",
+    "    # Store coefficients and r2 scores\n",
+    "    coefficients = []\n",
+    "    cv_scores = []\n",
+    "\n",
+    "    # Perform cross-validation manually\n",
+    "    for train_index, test_index in kf.split(X):\n",
+    "        X_train, X_test = X.iloc[train_index], X.iloc[test_index]  # Use .iloc for DataFrame\n",
+    "        y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
+    "\n",
+    "        # Train model on training set\n",
+    "        lm_model.fit(X_train, y_train)\n",
+    "\n",
+    "        # Store coefficients\n",
+    "        coefficients.append(lm_model.coef_)\n",
+    "\n",
+    "        # Predict on test set\n",
+    "        y_pred = lm_model.predict(X_test)\n",
+    "\n",
+    "        # Calculate R² score\n",
+    "        r2 = r2_score(y_test, y_pred)\n",
+    "        cv_scores.append(r2)\n",
+    "\n",
+    "    # Convert to NumPy array for analysis\n",
+    "    coefficients = np.array(coefficients)\n",
+    "    \n",
+    "    return coefficients, cv_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "print(\"Coefficients for each fold:\")\n",
+    "print(coefficients)\n",
+    "\n",
+    "# Print results\n",
+    "print(f\"Cross-Validation R² Scores: {cv_scores}\")\n",
+    "print(f\"Mean R²: {np.mean(cv_scores):.4f}\")\n",
+    "print(f\"Standard Deviation of R²: {np.std(cv_scores):.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Try different models\n"
    ]
   }
  ],
