--- a/Starbucks_Capstone_notebook.ipynb
+++ b/Starbucks_Capstone_notebook.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +27,10 @@
     "import json\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import train_test_split, cross_val_score, KFold\n",
+    "from sklearn.linear_model import LinearRegression, Lasso\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import train_test_split, KFold\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.metrics import r2_score\n",
     "import statsmodels.api as sm\n",
     "%matplotlib inline"
@@ -3842,80 +3844,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model_fit_cross_validation(selected_model, X, y):\n",
+    "def model_fit_cross_validation(selected_model, X, y, n_splits=5):\n",
     "    '''\n",
-    "    Split a dataset using K-fols. Then fits the seleted model and return the coefficients and r2 scores\n",
+    "    Split a dataset using Kfols. Then fits the seleted model and return the coefficients and r2 scores\n",
     "    INPUT:\n",
     "    selected_model - a string with the selected model to fit\n",
     "    X - a dataframe with the response variable\n",
     "    y - a dataframe with the explanatory variable\n",
+    "    n_splits - number of splits for Kfolds (default 5)\n",
     "\n",
     "    OUTPUT:\n",
-    "    coefficients - an array of coefficientes for each fold\n",
     "    cv_scores - an array of r2 scores for each fold\n",
     "    '''\n",
     "    # Define model\n",
     "    lm_model = selected_model\n",
+    "    # Flatten y to a 1D array (if it's a 2D column vector)\n",
+    "    y = y.values.ravel()\n",
     "\n",
     "    # Define K-Fold cross-validation\n",
     "    kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
     "\n",
-    "    # Store coefficients and r2 scores\n",
-    "    coefficients = []\n",
-    "    cv_scores = []\n",
+    "    # Perform cross-validation (returns R² scores for each fold)\n",
+    "    cv_scores = cross_val_score(lm_model, X, y, cv=kf, scoring='r2')\n",
     "\n",
-    "    # Perform cross-validation manually\n",
-    "    for train_index, test_index in kf.split(X):\n",
-    "        X_train, X_test = X.iloc[train_index], X.iloc[test_index]  # Use .iloc for DataFrame\n",
-    "        y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
-    "\n",
-    "        # Train model on training set\n",
-    "        lm_model.fit(X_train, y_train)\n",
-    "\n",
-    "        # Store coefficients\n",
-    "        coefficients.append(lm_model.coef_)\n",
-    "\n",
-    "        # Predict on test set\n",
-    "        y_pred = lm_model.predict(X_test)\n",
-    "\n",
-    "        # Calculate R² score\n",
-    "        r2 = r2_score(y_test, y_pred)\n",
-    "        cv_scores.append(r2)\n",
-    "\n",
-    "    # Convert to NumPy array for analysis\n",
-    "    coefficients = np.array(coefficients)\n",
-    "    \n",
-    "    return coefficients, cv_scores"
+    "    return cv_scores"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-Validation R² Scores: [0.07071752 0.07217435 0.06785381 0.06678177 0.06419471]\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "\n",
-    "print(\"Coefficients for each fold:\")\n",
-    "print(coefficients)\n",
+    "# try Kfolds\n",
+    "cv_scores = model_fit_cross_validation(LinearRegression(), X, y)\n",
     "\n",
     "# Print results\n",
-    "print(f\"Cross-Validation R² Scores: {cv_scores}\")\n",
-    "print(f\"Mean R²: {np.mean(cv_scores):.4f}\")\n",
-    "print(f\"Standard Deviation of R²: {np.std(cv_scores):.4f}\")"
+    "print(f\"Cross-Validation R² Scores: {cv_scores}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Try different models\n"
+    "def evaluate_models(models, X, y, n_splits=5):\n",
+    "    '''\n",
+    "    Evaluate multiple models and group the results (r-square)\n",
+    "    INPUT:\n",
+    "    models - list with model names\n",
+    "    X - a dataframe with the response variable\n",
+    "    y - a dataframe with the explanatory variable\n",
+    "    n_splits - number of splits for Kfolds (default 5)\n",
+    "\n",
+    "    OUTPUT:\n",
+    "    results - dataframe with model name and mean r-square\n",
+    "    '''\n",
+    "    results = []\n",
+    "    for model in models:\n",
+    "        model_name = model  \n",
+    "        print(f\"Evaluating model: {model_name}\") # print current model\n",
+    "        cv_scores = model_fit_cross_validation(model_name, X, y, n_splits)\n",
+    "        # Store results (model name and average R-square score)\n",
+    "        results.append({\n",
+    "            'Model': model_name,\n",
+    "            'R-square': np.mean(cv_scores)\n",
+    "            })\n",
+    "    # Convert results into a DataFrame\n",
+    "    results_df = pd.DataFrame(results).set_index('Model')\n",
+    "    \n",
+    "    return results_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating model: LinearRegression()\n",
+      "Evaluating model: Lasso()\n",
+      "Evaluating model: RandomForestRegressor(random_state=42)\n",
+      "Evaluating model: GradientBoostingRegressor(random_state=42)\n"
+     ]
+    }
+   ],
+   "source": [
+    "models = [\n",
+    "    LinearRegression(),\n",
+    "    Lasso(),\n",
+    "    RandomForestRegressor(n_estimators=100, random_state=42),\n",
+    "    GradientBoostingRegressor(n_estimators=100, random_state=42)\n",
+    "]\n",
+    "\n",
+    "# Evaluate the models\n",
+    "results_df = evaluate_models(models, X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>R-square</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Model</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>LinearRegression()</th>\n",
+       "      <td>0.068344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lasso()</th>\n",
+       "      <td>0.002053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RandomForestRegressor(random_state=42)</th>\n",
+       "      <td>0.059377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GradientBoostingRegressor(random_state=42)</th>\n",
+       "      <td>0.067031</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            R-square\n",
+       "Model                                               \n",
+       "LinearRegression()                          0.068344\n",
+       "Lasso()                                     0.002053\n",
+       "RandomForestRegressor(random_state=42)      0.059377\n",
+       "GradientBoostingRegressor(random_state=42)  0.067031"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_df"
    ]
   }
  ],
