--- a/Starbucks_Capstone_notebook.ipynb
+++ b/Starbucks_Capstone_notebook.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
     "import seaborn as sns\n",
     "from sklearn.linear_model import LinearRegression, Lasso\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.model_selection import train_test_split, KFold\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score, KFold\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.metrics import r2_score\n",
     "import statsmodels.api as sm\n",
